--- a/src/blueStacks/res/values-sr/strings.xml
+++ b/src/blueStacks/res/values-sr/strings.xml
@@ -808,4 +808,14 @@
   <string name="people_nearby_not_found_title">Тренутно нема корисника у Вашој близини</string>
   <string name="people_nearby_not_found_description">Да бисте покушали поново, притисните и држите прстом по средини екрана.</string>
   <string name="NSLocationWhenInUseUsageDescription">Неопходна Вам је дозвола да бисте приступили овој функцији.</string>
+  <string name="ban_liberty_title">Без реклама!</string>
+  <string name="ban_liberty_description">Само упознавање, ништа више</string>
+  <string name="guest_liberty_title">Гости</string>
+  <string name="guest_liberty_description">Сазнајте ко је посетио Вашу профилну страницу</string>
+  <string name="star_liberty_title">Популарни корисници</string>
+  <string name="star_liberty_description">Најпопуларнији корисници отворени за разговор</string>
+  <string name="crown_liberty_title">Истакните се</string>
+  <string name="crown_liberty_description">Лако се истиче у Претрази и Порукама</string>
+  <string name="like_liberty_title">Свиђања</string>
+  <string name="like_liberty_description">Погледајте коме се свиђате</string>
 </resources>
