--- a/src/blueStacks/res/values-tr/strings.xml
+++ b/src/blueStacks/res/values-tr/strings.xml
@@ -789,4 +789,15 @@
   <string name="people_nearby_not_found_title">Şu an size yakın kullanıcı bulunamdı</string>
   <string name="people_nearby_not_found_description">Tekrar denemek için, ekranın ortasına parmağınızla dokunup basılı tutunuz.</string>
   <string name="NSLocationWhenInUseUsageDescription">Bu fonksiyona erişebilmek için izin vermeniz gerekiyor.</string>
+  <string name="ban_liberty_title">Reklamsız!</string>
+  <string name="ban_liberty_description">Sadece arkadaşlık, basit ve kolay</string>
+  <string name="guest_liberty_title">Ziyaretçiler</string>
+  <string name="guest_liberty_description">Profil sayfanı kimler ziyaret etmiş öğren!</string>
+  <string name="star_liberty_title">Popüler kullanıcılar</string>
+  <string name="star_liberty_description">Sohbete başlamak ve kaynaşmak için en iyi yöntemler
+  </string>
+  <string name="crown_liberty_title">Öne çık</string>
+  <string name="crown_liberty_description">Arama sonuçlarında ve mesajlar sayfasına öne çık</string>
+  <string name="like_liberty_title">Beğeni</string>
+  <string name="like_liberty_description">Seni kimler beğenmiş, öğren</string>
 </resources>
