--- a/src/appland/res/values-de/strings.xml
+++ b/src/appland/res/values-de/strings.xml
@@ -828,4 +828,16 @@
     <string name="people_nearby_not_found_title">Es gibt momentan keine User in deiner Nähe</string>
     <string name="people_nearby_not_found_description">Um es nochmal zu versuchen, presse und halte einen Finger in der Mitte vom Bildschirm</string>
     <string name="NSLocationWhenInUseUsageDescription">Um Zugang zu dieser Funktion erhalten, musst du dein Einverständnis gegen.</string>
+    <string name="ban_liberty_title">Keine Werbung!</string>
+    <string name="ban_liberty_description">Einfach nur Dating, leicht und unkompliziert</string>
+    <string name="guest_liberty_title">Gäste</string>
+    <string name="guest_liberty_description">Erfahre, wer dein Profil besucht hat</string>
+    <string name="star_liberty_title">Beliebte Nutzer</string>
+    <string name="star_liberty_description">Die beliebtesten Eisbrecher für Gespräche</string>
+    <string name="crown_liberty_title">Auffallen.</string>
+    <string name="crown_liberty_description">Falle sowohl bei Suchergebnissen als auch in deinen
+        Nachrichten auf
+    </string>
+    <string name="like_liberty_title">Likes</string>
+    <string name="like_liberty_description">Erfahre, wer dich mag</string>
 </resources>
