--- a/src/blueStacks/res/values-fr/strings.xml
+++ b/src/blueStacks/res/values-fr/strings.xml
@@ -802,4 +802,18 @@
   <string name="people_nearby_not_found_title">Il n\'y a pas d\'utilisateurs à proximité de votre localisation pour le moment</string>
   <string name="people_nearby_not_found_description">Pour réessayer, appuyez et maintenez un doigt dans le centre de l\'écran.</string>
   <string name="NSLocationWhenInUseUsageDescription">Pour accéder à cette fonction, vous devez donner votre autorisation</string>
+  <string name="ban_liberty_title">Pas de pubs !</string>
+  <string name="ban_liberty_description">Juste faire connaissance, purement et simplement</string>
+  <string name="guest_liberty_title">Invités</string>
+  <string name="guest_liberty_description">Découvrez qui a visité votre page de profil</string>
+  <string name="star_liberty_title">Utilisateurs populaires</string>
+  <string name="star_liberty_description">Les brise-glaces les plus populaires pour démarrer une
+    conversation
+  </string>
+  <string name="crown_liberty_title">Démarquez-vous</string>
+  <string name="crown_liberty_description">Démarquez-vous facilement dans la Recherche et les
+    Messages
+  </string>
+  <string name="like_liberty_title">J\'aime</string>
+  <string name="like_liberty_description">Voir qui vous aime</string>
 </resources>
