--- a/src/blueStacks/res/values-pt/strings.xml
+++ b/src/blueStacks/res/values-pt/strings.xml
@@ -797,4 +797,16 @@
   <string name="people_nearby_not_found_title">Não existem utilizadores perto de ti neste momento</string>
   <string name="people_nearby_not_found_description">Para tentares novamente, prime e mantém o teu dedo no centro do ecrã</string>
   <string name="NSLocationWhenInUseUsageDescription">Para teres acesso a esta funcionalidade, tens de dar a tua permissão</string>
+  <string name="ban_liberty_title">Sem anúncios!</string>
+  <string name="ban_liberty_description">Apenas namorar, pura e simplesmente</string>
+  <string name="guest_liberty_title">Visitantes</string>
+  <string name="guest_liberty_description">Descobre quem visitou a tua página de perfil</string>
+  <string name="star_liberty_title">Utilizadores Populares</string>
+  <string name="star_liberty_description">As melhores frases para quebrar o gelo numa conversa
+  </string>
+  <string name="crown_liberty_title">Destaca-te</string>
+  <string name="crown_liberty_description">Destaca-te facilmente na Pesquisa e nas Mensagens
+  </string>
+  <string name="like_liberty_title">Gostos</string>
+  <string name="like_liberty_description">Vê quem gosta de ti</string>
 </resources>
