--- a/src/amazon/res/values-it/strings.xml
+++ b/src/amazon/res/values-it/strings.xml
@@ -868,8 +868,7 @@
     <string name="guest_liberty_title">Ospiti</string>
     <string name="guest_liberty_description">Scopri chi ha visitato il tuo profilo</string>
     <string name="star_liberty_title">Utenti popolari</string>
-    <string name="star_liberty_description">Il più famoso rompighiaccio per iniziare a conversare
-    </string>
+    <string name="star_liberty_description">Il più famoso rompighiaccio per iniziare a conversare</string>
     <string name="crown_liberty_title">Distinguiti</string>
     <string name="crown_liberty_description">Spicca facilmente tra le Ricerche e i Messaggi</string>
     <string name="like_liberty_title">Mi piace</string>
