--- a/src/blueStacks/res/values-ru/strings.xml
+++ b/src/blueStacks/res/values-ru/strings.xml
@@ -178,6 +178,7 @@
   <string name="general_profile">Профиль</string>
   <string name="general_settings">Настройки</string>
   <string name="general_vk_profile">ВК</string>
+  <string name="general_ok_profile">ОК</string>
   <string name="auth_btn_vk">ВКонтакте</string>
   <string name="auth_btn_fb">Facebook</string>
   <string name="auth_retry">Повторить</string>
