--- a/src/blueStacks/res/values-sr/strings.xml
+++ b/src/blueStacks/res/values-sr/strings.xml
@@ -761,13 +761,10 @@
   <string name="settings_check_vip_alert">Ваш захтев за проверу VIP-статуса је послат.</string>
   <string name="novice_sympathy">Шаљите свиђања само онима који\nВас заиста привлаче.\nМожда ћете
         наћи неког посебног!</string>
-  <string name="go_dating_message">Почните да упознајете људе и овде ће се појавити имена оних
-    корисника који су посетили Ваш профил
-  </string>
+  <string name="go_dating_message">Почните да упознајете људе и овде ће се појавити имена оних корисника који су посетили Ваш профил</string>
   <string name="vk_profile_button_tf_group">ГрупаSpark</string>
   <string name="vk_profile_button_join_tf_group">Придружити се групи Spark</string>
-  <string name="vk_profile_button_join_vkgames_group">Придружити се групи \&quot;Игре
-    ВК\&quot;</string>
+  <string name="vk_profile_button_join_vkgames_group">Придружити се групи \&quot;Игре ВК\&quot;</string>
   <string name="vk_profile_button_invite_friends">Позвати пријатеље</string>
   <string name="vk_profile_invite_friends_title">Позвати пријатеље</string>
   <string name="invite_friend_button">Позвати</string>
@@ -776,20 +773,12 @@
   <string name="vk_friends_success_invite">Позив послат</string>
   <string name="join_group_success">Придружили сте се групи</string>
   <string name="settings_auto_greeting_title">Ауто-поздрав</string>
-  <string name="settings_auto_greeting_subtitle">Дозволите Spark-у да разговор аутоматски започне
-    поздравом кад год Вам неко пошаље Свиђање
-  </string>
+  <string name="settings_auto_greeting_subtitle">Дозволите Spark-у да разговор аутоматски започне поздравом кад год Вам неко пошаље Свиђање</string>
   <string name="chat_auto_reply_title">Текст поруке је сакривен</string>
-  <string name="chat_auto_reply_message">Да бисте отворили ову поруку или одговорили на исту,
-    постаните VIP-корисник
-  </string>
+  <string name="chat_auto_reply_message">Да бисте отворили ову поруку или одговорили на исту, постаните VIP-корисник</string>
   <string name="chat_auto_reply_button">Постати VIP</string>
-  <string name="take_photo_text_1">Молимо Вас са поставите своју фотографију како бидте започели
-    ћаскање.
-  </string>
-  <string name="take_photo_text_2">На фотографији можете бити сам Ви; све слике прегледавају наши
-    модератори како би утврдили да се правила поштују.
-  </string>
+  <string name="take_photo_text_1">Молимо Вас са поставите своју фотографију како бидте започели ћаскање.</string>
+  <string name="take_photo_text_2">На фотографији можете бити сам Ви; све слике прегледавају наши модератори како би утврдили да се правила поштују.</string>
   <string name="unlock_by_viewed_ad_video_button_text">Откључати бесплатно на %s</string>
   <plurals name="free_minutes">
     <item quantity="few">%d минута</item>
