--- a/src/blueStacks/res/values-tr/strings.xml
+++ b/src/blueStacks/res/values-tr/strings.xml
@@ -773,8 +773,7 @@
   <string name="guest_liberty_title">Ziyaretçiler</string>
   <string name="guest_liberty_description">Profil sayfanı kimler ziyaret etmiş öğren!</string>
   <string name="star_liberty_title">Popüler kullanıcılar</string>
-  <string name="star_liberty_description">Sohbete başlamak ve kaynaşmak için en iyi yöntemler
-  </string>
+  <string name="star_liberty_description">Sohbete başlamak ve kaynaşmak için en iyi yöntemler</string>
   <string name="crown_liberty_title">Öne çık</string>
   <string name="crown_liberty_description">Arama sonuçlarında ve mesajlar sayfasına öne çık</string>
   <string name="like_liberty_title">Beğeni</string>
