--- a/src/ifree/res/values-ru/strings.xml
+++ b/src/ifree/res/values-ru/strings.xml
@@ -212,6 +212,7 @@
     <string name="general_profile">Профиль</string>
     <string name="general_settings">Настройки</string>
     <string name="general_vk_profile">ВК</string>
+    <string name="general_ok_profile">ОК</string>
 
     <!-- Auth -->
     <string name="auth_btn_vk">ВКонтакте</string>
