--- a/src/amazon/res/values/strings.xml
+++ b/src/amazon/res/values/strings.xml
@@ -179,6 +179,7 @@
     <string name="general_profile">Profile</string>
     <string name="general_settings">Settings</string>
     <string name="general_vk_profile">VK</string>
+    <string name="general_ok_profile">OK</string>
     <string name="auth_btn_vk">Vkontakte</string>
     <string name="auth_btn_fb">Facebook</string>
     <string name="auth_retry">Retry</string>
