--- a/src/blueStacks/res/values-tr/strings.xml
+++ b/src/blueStacks/res/values-tr/strings.xml
@@ -171,6 +171,7 @@
   <string name="general_profile">Profil</string>
   <string name="general_settings">Ayarlar</string>
   <string name="general_vk_profile">VK</string>
+  <string name="general_ok_profile">OK</string>
   <string name="auth_btn_vk">VKontakte</string>
   <string name="auth_btn_fb">Facebook</string>
   <string name="auth_retry">Tekrar deneyin</string>
