--- a/src/blueStacks/res/values-pt/strings.xml
+++ b/src/blueStacks/res/values-pt/strings.xml
@@ -170,6 +170,7 @@
   <string name="general_profile">Perfil</string>
   <string name="general_settings">Definições</string>
   <string name="general_vk_profile">VK</string>
+  <string name="general_ok_profile">OK</string>
   <string name="auth_btn_vk">Vkontakte</string>
   <string name="auth_btn_fb">Facebook</string>
   <string name="auth_retry">Tentar novamente</string>
@@ -748,6 +749,7 @@
   <string name="settings_check_vip_alert">O teu pedido para verificar o teu estatuto VIP foi enviado.</string>
   <string name="novice_sympathy">Envia gostos apenas às pessoas\npor quem te sentes
         atraído(a).\nPodes encontrar alguém especial!</string>
+  <string name="novice_sympathies_bonus">Vais receber %1$d Gostos como presente! Isto significa que %2$d pessoas te vão dar um Gosto genuinamente sentido!</string>
   <string name="go_dating_message">Começa a namorar e vê quem viu o teu perfil aqui</string>
   <string name="vk_profile_button_tf_group">Grupo Spark</string>
   <string name="vk_profile_button_join_tf_group">Junta-te ao grupo Spark</string>
