--- a/src/blueStacks/res/values-sr/strings.xml
+++ b/src/blueStacks/res/values-sr/strings.xml
@@ -172,6 +172,7 @@
   <string name="general_profile">Профил</string>
   <string name="general_settings">Подешавања</string>
   <string name="general_vk_profile">ВК</string>
+  <string name="general_ok_profile">OK</string>
   <string name="auth_btn_vk">ВКонтакте</string>
   <string name="auth_btn_fb">Facebook</string>
   <string name="auth_retry">Покушај поново</string>
@@ -761,6 +762,8 @@
   <string name="settings_check_vip_alert">Ваш захтев за проверу VIP-статуса је послат.</string>
   <string name="novice_sympathy">Шаљите свиђања само онима који\nВас заиста привлаче.\nМожда ћете
         наћи неког посебног!</string>
+  <string name="novice_sympathies_bonus">Добијате %1$d свиђања на\nпоклон! То значи да ће
+         Вам %2$d људи,\nдати своје свиђање и то заиста мислити.</string>
   <string name="go_dating_message">Почните да упознајете људе и овде ће се појавити имена оних корисника који су посетили Ваш профил</string>
   <string name="vk_profile_button_tf_group">ГрупаSpark</string>
   <string name="vk_profile_button_join_tf_group">Придружити се групи Spark</string>
