--- a/src/ifree/res/values/strings.xml
+++ b/src/ifree/res/values/strings.xml
@@ -816,6 +816,7 @@
     <string name="novice_sympathy">Send Likes only to those\nwho really attract you.\nYou just might
         find someone special!
     </string>
+    <string name="novice_sympathies_bonus">You are receiving %1$d Likes as a \ngift! This means that the people \nwho send you Likes \nreally like you a lot!</string>
     <string name="go_dating_message">Start dating and you will who view you page here</string>
     <string name="vk_profile_button_tf_group">Topface group</string>
     <string name="vk_profile_button_join_tf_group">Join the Topface group</string>
