--- a/src/blueStacks/res/values-es/strings.xml
+++ b/src/blueStacks/res/values-es/strings.xml
@@ -753,6 +753,8 @@
   <string name="settings_check_vip_alert">La solicitud de comprobación ha sido enviada</string>
   <string name="novice_sympathy">Envía simpatías a aquellos\nquienes realmente te gustan
         para\nempezar una relación satisfactoria</string>
+  <string name="novice_sympathies_bonus">¡Recibirás %1$d simpatías de\nregalo! Esto significa que
+        tú\nseguro que le gustas al %2$d de las personas,\nque te expresarán su simpatía.</string>
   <string name="go_dating_message">Comienzo a conocer esto y podrá ver a los usuarios que visitan su perfil</string>
   <string name="vk_profile_button_tf_group">Grupo Spark</string>
   <string name="vk_profile_button_join_tf_group">Entrar en el grupo Spark</string>
@@ -776,8 +778,8 @@
     <item quantity="other">%d minutos</item>
     <item quantity="one">%d minuto</item>
   </plurals>
-  <string name="buy_button_sticker_popular">Los más vendidos</string>
-  <string name="buy_button_sticker_best_value">El mejor precio</string>
+  <string name="buy_button_sticker_popular">Los más\n vendidos</string>
+  <string name="buy_button_sticker_best_value">El mejor\n precio</string>
   <string name="ban_liberty_title">¡Sin publicidad!</string>
   <string name="ban_liberty_description">Solo conocer gente, nada más</string>
   <string name="guest_liberty_title">Invitados</string>
