--- a/src/blueStacks/res/values-fr/strings.xml
+++ b/src/blueStacks/res/values-fr/strings.xml
@@ -755,6 +755,7 @@
   <string name="settings_check_vip_alert">Votre demande de vérification du statut VIP a été envoyée.</string>
   <string name="novice_sympathy">Envoyez des J\'aime aux personnes qui vous\nplaisent
         vraiment.\nVous allez peut être rencontrer quelqu\'un d\'unique !</string>
+  <string name="novice_sympathies_bonus">Vous recevez %1$d J\'aime en cadeau ! Cela signifie que %2$d personnes vont vous donner un J\'aime et qu\'elles le pensent réellement !</string>
   <string name="go_dating_message">Commencez à faire connaissance et découvrez ici qui regarde votre profil</string>
   <string name="vk_profile_button_tf_group">Groupe Spark</string>
   <string name="vk_profile_button_join_tf_group">Rejoindre le groupe Spark</string>
@@ -779,7 +780,7 @@
     <item quantity="one">%d minute</item>
   </plurals>
   <string name="buy_button_sticker_popular">Populaire</string>
-  <string name="buy_button_sticker_best_value">Meilleure valeur</string>
+  <string name="buy_button_sticker_best_value">Meilleure\n valeur</string>
   <string name="ban_liberty_title">Pas de pubs !</string>
   <string name="ban_liberty_description">Juste faire connaissance, purement et simplement</string>
   <string name="guest_liberty_title">Invités</string>
