--- a/src/ifree/res/values-tr/strings.xml
+++ b/src/ifree/res/values-tr/strings.xml
@@ -814,6 +814,7 @@
     <string name="settings_check_vip_alert">VIP statüsünün kontrol edilmesi talebiniz iletildi.</string>
     <string name="novice_sympathy">Yakın bir arkadaşlığa başlamak için sadece hoşlandığınız \nkişilere beğeni gönderin. 
             Belki de \nsizin için gerçekten özel birini böylece bulabilirsiniz.</string>
+    <string name="novice_sympathies_bonus">Hediye olarak %1$d beğeni \nkazancaksın! Bu demek oluyor ki, sana Beğeni gönderen \nkişiler senden \ngerçekten hoşlanıyor.</string>
     <string name="go_dating_message">Yeni arkadaşlar bulmaya başla, bu sayfada profile bakanları görebilirsin.</string>
     <string name="vk_profile_button_tf_group">Topface grubu</string>
     <string name="vk_profile_button_join_tf_group">Topface grubuna katıl</string>
@@ -837,8 +838,8 @@
         <item quantity="other">%d dakika</item>
         <item quantity="one">%d dakika</item>
     </plurals>
-    <string name="buy_button_sticker_popular">En çok satan</string>
-    <string name="buy_button_sticker_best_value">Süper fiyat</string>
+    <string name="buy_button_sticker_popular">En çok\n satan</string>
+    <string name="buy_button_sticker_best_value">Süper\n fiyat</string>
     <string name="ban_liberty_title">Reklamsız!</string>
     <string name="ban_liberty_description">Sadece arkadaşlık, basit ve kolay</string>
     <string name="guest_liberty_title">Ziyaretçiler</string>
