--- a/src/ok/res/values-ru/strings.xml
+++ b/src/ok/res/values-ru/strings.xml
@@ -1032,7 +1032,7 @@
         <item quantity="other">%d минут</item>
     </plurals>
 
-    <string name="buy_button_sticker_popular">хит продаж</string>
+    <string name="buy_button_sticker_popular">Хит продаж</string>
     <string name="buy_button_sticker_best_value">Лучшая цена</string>
 
     <string name="ban_liberty_title">Без рекламы!</string>
