--- a/src/amazon/res/values-sr/strings.xml
+++ b/src/amazon/res/values-sr/strings.xml
@@ -884,4 +884,5 @@
     <string name="crown_liberty_description">Лако се истиче у Претрази и Порукама</string>
     <string name="like_liberty_title">Свиђања</string>
     <string name="like_liberty_description">Погледајте коме се свиђате</string>
+    <string name="vk_profile_invite_friends_error">Корисник више не прихвата позиве</string>
 </resources>
