--- a/src/blueStacks/res/values-es/strings.xml
+++ b/src/blueStacks/res/values-es/strings.xml
@@ -790,4 +790,5 @@
   <string name="crown_liberty_description">Es difícil no destacar en la búsqueda y en los mensajes</string>
   <string name="like_liberty_title">Simpatías</string>
   <string name="like_liberty_description">Mira a quién le gustas</string>
+  <string name="vk_profile_invite_friends_error">El usuario ha prohibido que le envíen mensajes</string>
 </resources>
