--- a/src/blueStacks/res/values/strings.xml
+++ b/src/blueStacks/res/values/strings.xml
@@ -773,4 +773,5 @@
   <string name="crown_liberty_description">Easily stand out in Search and Messages</string>
   <string name="like_liberty_title">Likes</string>
   <string name="like_liberty_description">See who likes you</string>
+  <string name="vk_profile_invite_friends_error">User is no longer accepting invitations</string>
 </resources>
