--- a/src/google/res/values-it/strings.xml
+++ b/src/google/res/values-it/strings.xml
@@ -875,4 +875,5 @@
     <string name="crown_liberty_description">Spicca facilmente tra le Ricerche e i Messaggi</string>
     <string name="like_liberty_title">Mi piace</string>
     <string name="like_liberty_description">Scopri a chi piaci</string>
+    <string name="vk_profile_invite_friends_error">L\'utente ha disattivato la ricezione di inviti</string>
 </resources>
