--- a/src/ok/res/values-fr/strings.xml
+++ b/src/ok/res/values-fr/strings.xml
@@ -882,4 +882,5 @@
     <string name="crown_liberty_description">Démarquez-vous facilement dans la Recherche et les Messages</string>
     <string name="like_liberty_title">J\'aime</string>
     <string name="like_liberty_description">Voir qui vous aime</string>
+    <string name="vk_profile_invite_friends_error">L\'utilisateur n\'accepte plus les invitations</string>
 </resources>
