--- a/src/blueStacks/res/values-de/strings.xml
+++ b/src/blueStacks/res/values-de/strings.xml
@@ -722,7 +722,7 @@
   <string name="settings_check_vip_alert">Deine Anfrage zur Überprüfung des VIP-Status wurde verschickt</string>
   <string name="novice_sympathy">Senden Sie Sympathien den Menschen, die Ihnen\nwirklich
         gefallen,\num eine angenehme Bekanntschaft anzufangen</string>
-  <string name="go_dating_message">Fange an zu daten, und du werdest sehen wer dein Profil angeschaut hat.</string>
+  <string name="go_dating_message">Fange an, Leute kennenzulernen und die Namen derjenigen, die dein Profil besucht haben, werden hier erscheinen.</string>
   <string name="photo_not_from_main_album">Unsere Moderatoren haben entschieden, dass dieses Foto nicht als Profilfoto verwendet werden darf.</string>
   <string name="sidebar_vk_profile">VK Profil</string>
   <string name="title_vk_profile">VK Profil</string>
@@ -777,4 +777,5 @@
   <string name="crown_liberty_description">Falle sowohl bei Suchergebnissen als auch in deinen Nachrichten auf</string>
   <string name="like_liberty_title">Likes</string>
   <string name="like_liberty_description">Erfahre, wer dich mag</string>
+  <string name="refill_balance_view_title">Auf Ihrem Konto</string>
 </resources>
