--- a/src/blueStacks/res/values-es/strings.xml
+++ b/src/blueStacks/res/values-es/strings.xml
@@ -754,7 +754,7 @@
   <string name="settings_check_vip_alert">La solicitud de comprobación ha sido enviada</string>
   <string name="novice_sympathy">Envía simpatías a aquellos\nquienes realmente te gustan
         para\nempezar una relación satisfactoria</string>
-  <string name="go_dating_message">Comienzo a conocer esto y podrá ver a los usuarios que visitan su perfil</string>
+  <string name="go_dating_message">Comienza  a conocer y aquí verás a los usuarios que visitan tu perfil.</string>
   <string name="photo_not_from_main_album">Por los resultados de la moderación, está prohibida esta foto en el avatar</string>
   <string name="sidebar_vk_profile">Perfil VKontakt</string>
   <string name="title_vk_profile">Perfil VK</string>
@@ -810,4 +810,5 @@
   <string name="crown_liberty_description">Es difícil no destacar en la búsqueda y en los mensajes</string>
   <string name="like_liberty_title">Simpatías</string>
   <string name="like_liberty_description">Mira a quién le gustas</string>
+  <string name="refill_balance_view_title">En tu cuenta</string>
 </resources>
