--- a/src/blueStacks/res/values-fr/strings.xml
+++ b/src/blueStacks/res/values-fr/strings.xml
@@ -756,7 +756,7 @@
   <string name="settings_check_vip_alert">Votre demande de vérification du statut VIP a été envoyée.</string>
   <string name="novice_sympathy">Envoyez des J\'aime aux personnes qui vous\nplaisent
         vraiment.\nVous allez peut être rencontrer quelqu\'un d\'unique !</string>
-  <string name="go_dating_message">Commencez à faire connaissance et découvrez ici qui regarde votre profil</string>
+  <string name="go_dating_message">Apprenez à mieux connaître les gens et les noms des utilisateurs ayant visité votre profil apparaîtront ici !</string>
   <string name="photo_not_from_main_album">Un modérateur a décidé que cette photo ne peut pas être utilisée comme photo de profil.</string>
   <string name="sidebar_vk_profile">Profil VK</string>
   <string name="title_vk_profile">Profil VK</string>
@@ -811,4 +811,5 @@
   <string name="crown_liberty_description">Démarquez-vous facilement dans la Recherche et les Messages</string>
   <string name="like_liberty_title">J\'aime</string>
   <string name="like_liberty_description">Voir qui vous aime</string>
+  <string name="refill_balance_view_title">Votre compte</string>
 </resources>
