--- a/src/blueStacks/res/values-ru/strings.xml
+++ b/src/blueStacks/res/values-ru/strings.xml
@@ -858,4 +858,5 @@
   <string name="crown_liberty_description">Сложно не заметить в поиске и сообщениях</string>
   <string name="like_liberty_title">Симпатии</string>
   <string name="like_liberty_description">Посмотрите, кому вы нравитесь</string>
+  <string name="refill_balance_view_title">На вашем счете</string>
 </resources>
