--- a/src/blueStacks/res/values/strings.xml
+++ b/src/blueStacks/res/values/strings.xml
@@ -738,7 +738,7 @@
   <string name="settings_check_vip_alert">Your request to check VIP-status has been sent.</string>
   <string name="novice_sympathy">Send Likes only to those\nwho really attract you.\nYou just might
         find someone special!</string>
-  <string name="go_dating_message">Start dating and you will who view you page here</string>
+  <string name="go_dating_message">Start getting to know people and here will appear the names of those users who visited your profile.</string>
   <string name="photo_not_from_main_album">A moderator has decided that this photo may not be used as a profile photo.</string>
   <string name="sidebar_vk_profile">VK Profile</string>
   <string name="title_vk_profile">VK Profile</string>
@@ -793,4 +793,5 @@
   <string name="crown_liberty_description">Easily stand out in Search and Messages</string>
   <string name="like_liberty_title">Likes</string>
   <string name="like_liberty_description">See who likes you</string>
+  <string name="refill_balance_view_title">Your balance</string>
 </resources>
