--- a/src/google/res/values-sr/strings.xml
+++ b/src/google/res/values-sr/strings.xml
@@ -847,7 +847,8 @@
     <string name="novice_sympathy">Шаљите свиђања само онима који\nВас заиста привлаче.\nМожда ћете
         наћи неког посебног!
     </string>
-    <string name="go_dating_message">Почните да упознајете људе и овде ће се појавити имена оних корисника који су посетили Ваш профил</string>
+    <string name="go_dating_message">Почните да упознајете људе и овде ће се појавити имена оних корисника 
+        који су посетили Ваш профил</string>
     <string name="photo_not_from_main_album">Наши модератори су одлучили да ова фотографија не може да буде искоришћена као
           профилна слика</string>
     <string name="sidebar_vk_profile">ВК профил</string>
@@ -905,4 +906,5 @@
     <string name="crown_liberty_description">Лако се истиче у Претрази и Порукама</string>
     <string name="like_liberty_title">Свиђања</string>
     <string name="like_liberty_description">Погледајте коме се свиђате</string>
+    <string name="refill_balance_view_title">Ваш налог</string>
 </resources>
