--- a/src/google/res/values-it/strings.xml
+++ b/src/google/res/values-it/strings.xml
@@ -838,7 +838,8 @@
     <string name="novice_sympathy">Invia le simpatie solo alle persone che ti\npiacciono
         veramente\nper iniziare una piacevole relazione
     </string>
-    <string name="go_dating_message">Comincia a fare conoscenze e in questa sezione vedrai gli utenti che hanno visitato il tuo profilo</string>
+    <string name="go_dating_message">Comincia a fare conoscenze ed in questa sezione vedrai gli utenti
+        che hanno visitato il tuo profilo</string>
     <string name="photo_not_from_main_album">Non puoi impostare questa foto come profilo perché non conforme ai canoni della moderazione</string>
     <string name="sidebar_vk_profile">Profilo Vkontakte</string>
     <string name="title_vk_profile">Profilo VKontakte</string>
@@ -895,4 +896,11 @@
     <string name="crown_liberty_description">Spicca facilmente tra le Ricerche e i Messaggi</string>
     <string name="like_liberty_title">Mi piace</string>
     <string name="like_liberty_description">Scopri a chi piaci</string>
+    <string name="refill_balance_view_title">Il tuo saldo</string>
+    <string name="access_to_location_popup_title">Geo localizzazione non disponibile</string>
+    <string name="access_to_location_popup_description">Sfortunatamente la geo localizzazione non è disponibile per la tua posizione. Per continuare, devi consentire l\'accesso.</string>
+    <string name="access_to_location_popup_access_button">Consenti l\'accesso</string>
+    <string name="city_selector_set_your_city">Seleziona la tua città</string>
+    <string name="city_selector_detect_automatically">Imposta automaticamente</string>
+    <string name="city_selector_your_city">La tua città</string>
 </resources>
