--- a/src/google/res/values/strings.xml
+++ b/src/google/res/values/strings.xml
@@ -817,7 +817,7 @@
     <string name="novice_sympathy">Send Likes only to those\nwho really attract you.\nYou just might
         find someone special!
     </string>
-    <string name="go_dating_message">Start dating and you will who view you page here</string>
+    <string name="go_dating_message">Start getting to know people and here will appear the names of those users who visited your profile.</string>
     <string name="photo_not_from_main_album">A moderator has decided that this photo may not be used as a profile photo.</string>
     <string name="sidebar_vk_profile">VK Profile</string>
     <string name="title_vk_profile">VK Profile</string>
@@ -872,4 +872,11 @@
     <string name="crown_liberty_description">Easily stand out in Search and Messages</string>
     <string name="like_liberty_title">Likes</string>
     <string name="like_liberty_description">See who likes you</string>
+    <string name="refill_balance_view_title">Your balance</string>
+    <string name="access_to_location_popup_title">Geopositioning is unavailable</string>
+    <string name="access_to_location_popup_description">Unfortunately, geopositioning for your location is unavailable. To continue, you must allow access.</string>
+    <string name="access_to_location_popup_access_button">Allow access</string>
+    <string name="city_selector_set_your_city">Select your city</string>
+    <string name="city_selector_detect_automatically">Set automatically</string>
+    <string name="city_selector_your_city">Your city</string>
 </resources>
