--- a/src/amazon/res/values-sr/strings.xml
+++ b/src/amazon/res/values-sr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_locale">sr_RS</string>
-    <string name="photofeed_title">Стави у фид</string>
+    <string name="photofeed_title">Стави у листу новости</string>
     <string name="general_warning">УПОЗОРЕЊЕ</string>
     <string name="general_ok">ОК</string>
     <string name="general_any">Било који/која</string>
