--- a/src/blueStacks/res/values-ru/strings.xml
+++ b/src/blueStacks/res/values-ru/strings.xml
@@ -559,7 +559,8 @@
   <string name="incorrect_photo">Некорректное фото. Попробуйте загрузить другое</string>
   <string name="incorrect_photo_format">Некорректный формат фото. Попробуйте загрузить jpg или
         png</string>
-  <string name="incorrect_photo_size">У этой фотографии маленький размер (минимальный размер фото
+  <string name="incorrect_photo_size">Недопустимый размер фотографии</string>
+  <string name="incorrect_photo_size_show_restrictions">У этой фотографии маленький размер (минимальный размер фото
         — %1$dx%2$d пикселей).</string>
   <string name="input_contact_name">Введите имя контакта</string>
   <string name="incorrect_locale">Если Вы хотите, чтобы мы смогли прочитать Ваш отзыв, пишите его
