--- a/src/blueStacks/res/values/strings.xml
+++ b/src/blueStacks/res/values/strings.xml
@@ -209,7 +209,7 @@
   </plurals>
   <plurals name="buying_admiration_you_need_coins">
     <item quantity="other">To send an adoration, get %d more coins</item>
-    <item quantity="one">To send an adreoration, get %d more coin</item>
+    <item quantity="one">To send an adoration, get %d more coin</item>
   </plurals>
   <plurals name="buying_unlock_likes_you_need_coins">
     <item quantity="other">To be able to see who likes you, get %d more coins</item>
