--- a/src/google/res/values-it/strings.xml
+++ b/src/google/res/values-it/strings.xml
@@ -903,4 +903,6 @@
     <string name="city_selector_set_your_city">Seleziona la tua città</string>
     <string name="city_selector_detect_automatically">Imposta automaticamente</string>
     <string name="city_selector_your_city">La tua città</string>
+    <string name="photo_gallery_photo_deleted">La foto è stata eliminata</string>
+    <string name="photofeed_add_photo_to_feed_title">Ottieni il 1° posto!</string>
 </resources>
